# fabrique

./: .gitignore  Dockerfile  PHILOSOPHY.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  init.sh
docs/: conf.py  index.rst  installation.rst  lora.rst  multimodal.rst  multimodality.rst  philosophy.rst  quickstart.rst  sharding.rst  training.rst
docs/_static/css/: custom.css
docs/usage/: installation.rst
examples/: rouge.py  sft.py  sft_ocr.py  tax_form_recognition.py  xbrl.py  xbrl_vqa.py
examples/sft/: sft.py  sft_gemma.py  sft_hf.py
legacy/src/fabrique/: loading.py  utils.py
legacy/src/fabrique/models/common/: cache.py
legacy/src/fabrique/models/llama/: modeling.py
legacy/src/fabrique/models/phi/: modeling.py
src/fabrique/: __init__.py  export.py  gcp_utils.py  inspection.py  loading.py  loading2.py  lora.py  rouge.py  sampler.py  sampling.py  tokenizer_utils.py  training.py  utils.py
src/fabrique/models/gemma/: __init__.py  layers.py  load_rules.py  loader.py  modeling.py  modules.py  sampler.py  vision.py  vision_utils.py
tests/: test_lora.py  test_training.py  test_utils.py
tests/gemma/: test_attention.py  test_modules.py  test_sampler.py  test_vision.py  test_vision_utils.py
