[project]
name = "fabrique"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.11.0",
    "gemma>=3.1.0",
    "huggingface-hub>=0.33.4",
    "jinja2>=3.1.6",
    "kauldron==1.3.0",
    "multimethod>=2.0",
    "optax>=0.2.5",
    "safetensors>=0.5.3",
    "tokenizers>=0.21.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.4.1",
]
extra = [
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "pyarrow>=20.0.0",
    # "webdriver-manager>=4.0.2",
]


[tool.uv]
default-groups = ["dev", "extra"]
