[project]
name = "fabrique"
version = "0.3.0"
description = "Foundation for modern ML research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.0",
    "gemma>=3.1.0",
    "huggingface-hub>=0.33.4",
    "jinja2>=3.1.6",
    "kauldron==1.3.0",
    "multimethod>=2.0",
    "optax>=0.2.5",
    "safetensors>=0.5.3",
    "tokenizers>=0.21.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.4.1",
    "ruff>=0.13.1",
]
extra = [
    "pillow>=11.2.1",
    "datasets>=4.1.1",
]


[tool.uv]
default-groups = ["dev", "extra"]

# We depend on Gemma, Gemma depends on Kauldron, Kauldron depends on sqlalchemy <= 1.4.0,
# which creates unnecessary restriction for downstream packages. We don't really use
# SQLAlchemy directly or indirectly, thus, we remove the restriction on old version
override-dependencies = [
    "sqlalchemy>=1.4.0",
]
